# openapi/swagger/swagger.yaml
@@ -3810,10 +3810,11 @@ paths:
       summary: GET /api/payment/methods
       tags:
       - payment
+  /api/payment/orders:
     post:
       consumes:
       - application/json
-      operationId: payment_methods_route_post
+      operationId: payment_orders_route_post
       parameters:
       - description: request payload
         in: body
@@ -3851,7 +3852,7 @@ paths:
             $ref: '#/definitions/main.SwaggerEnvelope'
       security:
       - SessionCookie: []
-      summary: POST /api/payment/methods
+      summary: POST /api/payment/orders
       tags:
       - payment
   /api/payment/settings:
